--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8" />
+        <meta name="description" content="Student project to build an e-book of Alice in Wonderland for BATECH 189">
         <title>BATECH 189 Coding Web Project 4 - Dean Shimabukuro</title>
         
         <!-- Google Fonts -->
