--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
         <br>
         <br>
             <cite>
-                Image source and license are part of the public domain. <a href="https://fonts.google.com/specimen/Bentham/about?query=bentham">Bentham</a> and <a href="https://fonts.google.com/specimen/Allura/about?query=allura">Allura</a> fonts are used under <a href="https://openfontlicense.org/">license</a> courtesy of Google Fonts.
+                Image source and license are part of the <a href="https://www.loc.gov/item/12031272">public domain</a>. <a href="https://fonts.google.com/specimen/Bentham/about?query=bentham">Bentham</a> and <a href="https://fonts.google.com/specimen/Allura/about?query=allura">Allura</a> fonts are used under <a href="https://openfontlicense.org/">license</a> courtesy of Google Fonts.
             </cite>
     </footer>
     </body>
